<resources>
    <string name="app_name">PicRate</string>
    <string name="ask_camera_permission">PicRate wants to access camera</string>
    <string name="camera_permission_denied">Camera permission necessary!</string>
    <string name="camera_permission_granted">Camera connection established</string>
    <string name="generic_camera_error">Something went wrong</string>
    <string name="photo_folder_name">PicRate</string>
    <string name="ask_storage_permission">PicRate wants to access storage</string>
    <string name="storage_permission_denied">Storage permission necessary!</string>
    <string name="ask_location_permission">PicRate wants to access your location</string>
    <string name="position_not_found">Can\'t retrieve position</string>
    <string name="turn_on_gps">GPS is off. Turn it on?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="photo_locator">Photo</string>
    <string name="gps_permission_denied">GPS permission necessary!</string>
    <string name="image_storage_error">Couldn\'t save image</string>
    <string name="deletingLocalFileError">The local image could not be deleted!</string>
    <string name="drawer_open">Drawer is open</string>
    <string name="drawer_close">Drawer is closed</string>
    <string name="expiresIn">Expires in:</string>
    <string name="day_abbre">d</string>
    <string name="hour_abbre">h</string>
    <string name="profile">Profile</string>
    <string name="active_photos">Active Photos</string>
    <string name="notifications">Notifications</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="help_amp_feedback"><![CDATA[Help & feedback]]></string>
    <string name="no_more_photos">No more photos</string>
    <string name="report_message">Report this photo if it\'s inappropriate either for its challenge or in general</string>
    <string name="report_thanks">Thank you for reporting this picture</string>
    <string name="report_button">Report</string>
    <string name="tab_leaderboard_topusers">USERS</string>
    <string name="tab_leaderboard_challenges">CHALLENGES</string>
    <string name="front_camera_not_supported">The front camera is not supported!</string>
    <string name="photo_folder_not_created">The folder could not be created</string>
    <string name="buy_second_picture">Do you wish to buy a second photo slot for this challenge?</string>
    <string name="tab_title_challenges">Challenges</string>
    <string name="tab_title_rating">Rating</string>
    <string name="tab_title_leaderboards">Leaderboards</string>
    <string name="button_second_picture">Buy it</string>
    <string name="not_enough_money">Not enough money!</string>
    <string name="setting_save_photo">Save taken pictures</string>
    <string name="setting_sum_save_photo">Save on the phone\'s memory the pictures you take</string>
    <string name="leaderboard_session_name">winners:</string>
    <string name="signup_button">Signup</string>
    <string name="username_field">Username</string>
    <string name="signup_error">There was an error with the signup</string>
    <string name="username_error">The chosen username is not valid!</string>
    <string name="auth_key" translatable="false">1016249877332-m3muj1bgrmkr22sca4b2n6sl2g3b1n3q.apps.googleusercontent.com</string>
    <string name="picrate_motto">Join the challenge!</string>
    <string name="signup_message_title">Welcome to PicRate!</string>
    <string name="signup_message_body">To join PicRate you have to choose a nickname. This will appear in leaderboards and to all of your firends</string>
    <string name="notification_setting_new_challenge">New challenge</string>
    <string name="notification_setting_new_challenge_sum">Show a notification every time a new challenge is available</string>
    <string name="notification_setting_challenge_expiration">Challenge expiration</string>
    <string name="notifification_setting_challenge_expiration_sum">Show a notification each time an uncompleted challenge is about to expire</string>
    <string name="notification_new_challenge_title">New challenge available!</string>
    <string name="notification_new_challenge_body">Check out the new challenge available for you!</string>
    <string name="notification_setting_wifi_title">Show notifications on WiFi only</string>
    <string name="notification_setting_wifi_sum">Notifications will be displayed, and content will be updated, only when connected to a WiFi network. Be aware that this system consumes just a little bit of your internet connection!</string>
    <string name="minutes_abbre">m</string>
    <string name="challenge_expired">Expired</string>
    <string name="notification_expiration_title">Challenge expiring soon!</string>
    <string name="notification_expiration_body">A challenge is about to expire! Check it out!</string>
    <string name="your_medals">Your medals</string>
    <string name="medals">Medals</string>
    <string name="help_message">Thank you for using our app! Feel free to contact us if you have any feedback or if you seek help of any kind!</string>
    <string name="button_send_email">Send email</string>
    <string name="app_description">Picrate is an app that allows you to prove yourself in the fabulous world of photography. Join the daily challenges and compete with other players in order to reach the top! Earn your credits by rating other players’ pictures and by reaching the top positions of the leaderboards.</string>
    <string name="report_title">Report photo</string>
    <string name="delete_picture">Remove</string>
    <string name="delete_picture_dialog_message">Are you sure you want to remove this picture from the challenge? You won\'t be able to reverse this operation and you won\'t get any money back!</string>
    <string name="delete_photo_error">There\'s been an error deleting the image! Please try again!</string>
    <string name="date_pattern" translatable="false">yyyy-MM-dd HH:mm:ss</string>
    <string name="gps_error_location">Errror in determining the position</string>
    <string name="maps_api_key_michele" translatable="false">AIzaSyDmb3Cl5uuSO9iXMM_6ehfhMKJDJqG8_QY</string>
    <string name="cancel">Cancel</string>
    <string name="setting_location_message">The GPS is acquiring your location, please wait!</string>
    <string name="username_rules">Has to be 3&#8211;20 characters long and can only contain letters, numbers, \'.\', \'-\' and \'_\'</string>
    <string name="username_taken">This username has already been taken!</string>
    <string name="expired_on">Expired on:</string>
</resources>
