<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/materialOrange400"
    android:background="@color/materialOrange400">
    <TextView
        android:id="@+id/textView_activity_signup_messageTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/signup_message_title"
        android:textSize="30sp"
        android:layout_marginTop="@dimen/margin_medium"
        android:textColor="@color/colorWhite"/>
    <TextView
        android:id="@+id/textView_activity_signup_messageBody"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/signup_message_body"
        android:layout_below="@id/textView_activity_signup_messageTitle"
        android:gravity="center"
        android:textSize="@dimen/font_size_small"
        android:layout_marginTop="@dimen/margin_small"
        android:textColor="@color/colorWhite"/>
    <EditText
        android:id="@+id/editText_signup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:layout_marginTop="@dimen/margin_extra_large"
        android:hint="@string/username_field"
        android:textColor="@color/colorWhite"
        android:layout_below="@id/textView_activity_signup_messageBody"

        />
    <TextView
        android:id="@+id/help_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editText_signup"
        android:layout_centerHorizontal="true"
        android:text="@string/username_rules"
        android:layout_marginEnd="@dimen/margin_extra_large"
        android:layout_marginStart="@dimen/margin_extra_large"
        android:gravity="center"/>

    <!-- TODO: aggiungere un color picker o un profile picture -->
    <Button
        android:id="@+id/button_signup"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/help_text"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_small"
        android:backgroundTint="@color/button"
        android:text="@string/signup_button"
        android:textColor="@color/colorWhite" />
</RelativeLayout>