<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <android.support.constraint.ConstraintLayout
        android:id="@+id/constraint_layout_activity_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorLightGray"
        android:orientation="vertical">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/materialOrange400"
            android:minHeight="?attr/actionBarSize"
            android:theme="@style/Base.Theme.AppCompat"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:layout_constraintTop_creator="1" />

        <ImageButton
            android:id="@+id/btnBack"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_marginStart="@dimen/margin_small"
            android:layout_marginTop="@dimen/margin_small"
            android:background="@drawable/button_style"
            android:src="@drawable/ic_arrow_back_white_24dp"
            app:layout_constraintLeft_toLeftOf="@+id/toolbar"
            app:layout_constraintTop_toTopOf="@+id/toolbar"
            tools:layout_constraintLeft_creator="1" />
        <TextView
            android:id="@+id/textView_setting_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:textSize="@dimen/font_size_medium"
            android:textStyle="bold"
            android:text="@string/help_amp_feedback"
            android:textColor="@color/colorWhite"
            />
    </android.support.constraint.ConstraintLayout>
    <TextView
        android:id="@+id/textView_intro_activity_help"
        android:layout_below="@+id/constraint_layout_activity_top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_description"
        android:gravity="center"
        android:textSize="@dimen/font_size_small"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"/>
    <TextView
        android:id="@+id/textView_help_activity_help"
        android:layout_below="@+id/textView_intro_activity_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/help_message"
        android:gravity="center"
        android:textSize="@dimen/font_size_small"
        android:textColor="@color/colorWhite"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginEnd="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_medium"/>

    <Button
        android:id="@+id/button_activity_help"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView_help_activity_help"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/margin_medium"
        android:padding="@dimen/margin_medium"
        android:text="@string/button_send_email"
        android:textSize="@dimen/font_size_small" />
</RelativeLayout>